--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,4 +5,6 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "einsum"
 version = "0.0.1"
-dependencies = []
+dependencies = [
+    "torch",
+]
