--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,8 +2,9 @@
 name = "einsum"
 version = "0.2.0"
 homepage = "https://github.com/sorenlassen/einsum-experiment"
-description = "For solving einsum equations"
+description = "Experimental implementation of torch/onnx einsum"
 authors = ["Soren Lassen <sorenlassen@gmail.com>"]
+license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
