--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,31 @@
-[build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
-
-[project]
+[tool.poetry]
 name = "einsum"
-version = "0.0.1"
-dependencies = [
-    "numpy",
-]
+version = "0.2.3"
+homepage = "https://github.com/sorenlassen/einsum-experiment"
+description = "Experimental implementation of torch/onnx einsum"
+authors = ["Soren Lassen <sorenlassen@gmail.com>"]
+license = "MIT"
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "^3.8"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.1.1"
+pytest-cov = "^3.0.0"
+python-semantic-release = "^7.28.1"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
+[tool.semantic_release]
+version_toml = "pyproject.toml:tool.poetry.version"
+branch = "main"
+include_additional_files = "setup.py"
+major_on_zero = false
+build_command = "poetry build"              # build dists
+dist_path = "dist/"                         # where to put dists
+upload_to_pypi = false                      # don't auto-upload to PyPI
+remove_dist = false                         # don't remove dists
+
